# nf-collector

./: Cargo.toml  README.md
src/: lib.rs  main.rs  nfmsg.rs
src/handlers/: mod.rs  nfv5_handler.rs
src/nfmsg/: nfv5.rs
src/server/: mod.rs
