[package]
name = "nf_collector"
version = "0.1.0"
author = "Kotokaze"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.9.0", features = ["full"]}
byteorder = "1.4.3"
anyhow = "1.0.42"
derive_builder = "0.10.2"
chrono = "0.4.19"
